# notar

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  docker-compose.yml
.github/: rust.yml
.sqlx/: query-1e570726ee879c059d3dc02205570810ab6ff0560a74815adbb0860c23cdabd6.json  query-3cc839a2699f605d04cee0d858ef15e08f0410059b2a32fb420e56db2c0e44ad.json  query-540e80dc43345ef7ead1fba0abd37616d277ec52d6826087d2f894c6d35bd21e.json  query-92f3db5e60b80d8290e3fd44eb4ba15f4f6532d10ba479b5677ea2ec303f128a.json  query-d70f75890b21aa1f62e3345800dfb54cebad3df875e4b25afd52e8d921f64ed1.json  query-ea5bc72e3e5cdf598991ab857d39f54a4ac65368588d098ee312a927dce0167a.json
migrations/: 20251130132949_create_users.sql  20251130132950_create_tasks.sql  20260705163811_create_users.sql  20260705163920_create_notes.sql
src/: config.rs  main.rs
src/routes/: auth.rs  health.rs  middleware_auth.rs  mod.rs
src/routes/notes/: dto.rs  model.rs  queries.rs  routes.rs
src/routes/tasks/: dto.rs  mod.rs  model.rs  queries.rs  routes.rs
