[package]
name = "axum-api-template"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
dotenvy = "0.15.7"
sqlx = {version = "0.8.6", features = ["postgres", "macros", "runtime-tokio", "uuid", "migrate", "chrono"] }
uuid = { version = "1.18.1", features = ["serde","v4"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5.3"
rand = "0.8.5"
jsonwebtoken = "9"
