[package]
name = "axum-api-template"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
dotenvy = "0.15.7"
sqlx = {version = "0.9.0", features = ["postgres", "macros", "runtime-tokio", "uuid", "migrate", "chrono"] }
uuid = { version = "1.23.4", features = ["serde","v4"] }
chrono = { version = "0.4.45", features = ["serde"] }
argon2 = "0.5.3"
rand = "0.10.2"
jsonwebtoken = "10.4.0"
utoipa-axum = "0.2"
